--- a/META.yml
+++ b/META.yml
@@ -16,10 +16,16 @@ name: Text-Perfide-BookSync
 provides:
   Text::Perfide::BookSync:
     file: lib/Text/Perfide/BookSync.pm
-    version: 0.01_06
+    version: 0.01_07
 requires:
+  Cwd: 0
+  Data::Dumper: 0
+  File::Basename: 0
+  File::Spec: 0
   HTML::Auto: 0
+  List::Util: 0
   perl: 5.006
+  utf8::all: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01_06
+version: 0.01_07
